Parsing problems file

--- a/question 2/makefile
+++ b/question 2/makefile
@@ -10,7 +10,7 @@ all: default
 
 HEADERS = $(wildcard $(SOURCE_DIR)/*.hpp)
 
-GENERATE_OBJECTS = $(OBJECT_DIR)/main.o
+GENERATE_OBJECTS = $(OBJECT_DIR)/main.o $(OBJECT_DIR)/aco_tsp.o $(OBJECT_DIR)/aco_tsp_city.o
 
 $(OBJECT_DIR)/%.o: $(SOURCE_DIR)/%.cpp $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
